kubernetes/zipkin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin
  labels:
    app: zipkin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: zipkin.davidcamelo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
  tls:
    - hosts:
        - zipkin.davidcamelo.com
      secretName: zipkin-ingress
